- Added debugging mode option
- Fixed security issue ### (place details here)
- Fixed problems with show correct answers and custom css files
- Fixed issue with progress bar when user had seen a deleted unit
- Fixed issue with active field in personal settings
- Disabled save button in copy content from another lesson, until ajax response

=== Version 3.6.2 build 6550 ===
- Added new automatic importing functionality
- Added multiple coupons functionality (community++)
- Added code for deleting templates cache in upgrade script
- Fixed issue about social page in eF_template_printProjects
- Fixed bug in social page about displaying private comments in professor dashboard
- Fixed bug in importing lesson with reseting files options
- Fixed issue in community edition about deleting a course
- Fixed problem of loading file manager while editing a skill gap test
- Fixed toggling lesson auto complete when using IE6/7
- Fixed toggling courses/categories in the catalog, when using IE6/7
- Added check for OpenSSL libraries need for pdf certificates
- Redo only wrong answered questions improvements
- Deleting a user logs him out first
- Fixed issue with custom blocks and links block
- Added payments notifications

=== Version 3.6.1 build 6440 ===
- Added online help functionality
- Extended tests to allow students to redo only the wrong questions (community++)
- Fixed bug about news not taking into account expire field
- Fixed error in forum configuration panel with mysql strict mode
- Fixed bug about not checking course rules in sub-student user types
- Fixed default timezone in configuration to empty string (ticket 120)
- Fixed error in creating user when default group has no lessons or courses
- Fixed displaying payments icon in control panel although user type had no access to it
- Fixed alphabetical sorting for lessons and courses in index page
- Fixed user type display in forum
- Fixed problem about showing archived users in "Users who share lessons with me"